--- a/app/src/main/res/layout/task_fragment.xml
+++ b/app/src/main/res/layout/task_fragment.xml
@@ -6,16 +6,16 @@
     android:layout_height="match_parent">
 
     <EditText
-        android:id="@+id/edit_task"
+        android:id="@+id/taskTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
+        android:autofillHints="edit task"
         android:fontFamily="sans-serif-light"
         android:hint="@string/add_task"
         android:inputType="textAutoComplete"
-        android:autofillHints="edit task"
         android:minHeight="48dp"
-        android:textSize="18sp"/>
+        android:textSize="18sp" />
 
     <Button
         android:id="@+id/button_save"
@@ -30,6 +30,6 @@
         android:id="@+id/task_date"
         android:layout_width="match_parent"
         android:layout_height="68dp"
-        tools:text="Wed Nov 14 11:56 EST 2018" />
+        tools:text="Add the date" />
 
 </LinearLayout>
