--- a/app/src/main/res/layout/listitemtask.xml
+++ b/app/src/main/res/layout/listitemtask.xml
@@ -5,7 +5,8 @@
     android:id="@+id/linearLayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:visibility="visible">
 
 
     <androidx.cardview.widget.CardView
@@ -16,6 +17,7 @@
         android:layout_marginHorizontal="10sp"
         android:layout_marginVertical="20sp"
         android:backgroundTint="#7782C8"
+        android:foregroundGravity="center"
         android:overScrollMode="ifContentScrolls"
         app:cardCornerRadius="40dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -55,18 +57,13 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/taskTitle" />
 
-            <ProgressBar
-                android:id="@+id/progressBar"
-                style="?android:attr/progressBarStyleHorizontal"
-                android:layout_width="8dp"
-                android:layout_height="72dp" />
-
             <CheckBox
                 android:id="@+id/isDoneCheckBox"
                 android:layout_width="32dp"
                 android:layout_height="28dp"
                 android:layout_marginStart="4dp"
                 android:contentDescription="@string/task_done_label"
+                android:visibility="visible"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
